# FileSystemSize

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: fs_cli.cpp  fs_cli.h  logger.cpp  logger.h  main.cpp  task.cpp  task.h  task_queue.cpp  task_queue.h
